objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>SLI_MandateType__c</fullName>
        <label>Mandate Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute Plus</fullName>
                </value>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>Diversified Credit</fullName>
                </value>
                <value>
                    <fullName>Global Bonds</fullName>
                </value>
                <value>
                    <fullName>Global Equity</fullName>
                </value>
                <value>
                    <fullName>Income Funds</fullName>
                </value>
                <value>
                    <fullName>Index - Equity</fullName>
                </value>
                <value>
                    <fullName>Index - Global</fullName>
                </value>
                <value>
                    <fullName>Index - Multi Factor</fullName>
                </value>
                <value>
                    <fullName>Inflation Linked bonds</fullName>
                </value>
                <value>
                    <fullName>Medical Aid</fullName>
                </value>
                <value>
                    <fullName>Money Market</fullName>
                </value>
                <value>
                    <fullName>Property Income</fullName>
                </value>
                <value>
                    <fullName>SA Equity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLR_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Independent Financial Advisor</fullName>
                </value>
                <value>
                    <fullName>Liberty Agent</fullName>
                </value>
                <value>
                    <fullName>Liberty Entrepreneurs</fullName>
                </value>
                <value>
                    <fullName>Linked Companies</fullName>
                </value>
                <value>
                    <fullName>Other Bank Branches</fullName>
                </value>
                <value>
                    <fullName>SBSA Bank Branches</fullName>
                </value>
                <value>
                    <fullName>Standard Bank Financial Consultant (SBFC)</fullName>
                </value>
                <value>
                    <fullName>Stanfin Africa</fullName>
                </value>
                <value>
                    <fullName>Wealth and Investments</fullName>
                </value>
                <value>
                    <fullName>SBFC Call Centre</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
                <value>
                    <fullName>IFA Broker Division</fullName>
                    <isActive>false</isActive>
                    <label>IFA Broker Division</label>
                </value>
                <value>
                    <fullName>LISP</fullName>
                    <isActive>false</isActive>
                    <label>LISP</label>
                </value>
                <value>
                    <fullName>Liberty Agency</fullName>
                    <isActive>false</isActive>
                    <label>Liberty Agency</label>
                </value>
                <value>
                    <fullName>Liberty Franchise</fullName>
                    <isActive>false</isActive>
                    <label>Liberty Franchise</label>
                </value>
                <value>
                    <fullName>Strategic Partners</fullName>
                    <isActive>false</isActive>
                    <label>Strategic Partners</label>
                </value>
                <value>
                    <fullName>Wholesale - FOF</fullName>
                    <isActive>false</isActive>
                    <label>Wholesale - FOF</label>
                </value>
                <value>
                    <fullName>Wholesale -IFA</fullName>
                    <isActive>false</isActive>
                    <label>Wholesale -IFA</label>
                </value>
                <value>
                    <fullName>Wholeseale - Corporate</fullName>
                    <isActive>false</isActive>
                    <label>Wholeseale - Corporate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Group__c</fullName>
        <label>Assigned From Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_OwnerUser__c</fullName>
        <label>Assigned From User (Deprecated)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Queue__c</fullName>
        <label>Assigned From Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Last_Assigned_Date__c</fullName>
        <label>Q-assign Last Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Reviewed_Days__c</fullName>
        <formula>LastModifiedDate - ortoo_qra__Q_assign_Last_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q-assign Reviewed Days</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>AW_ProductInterest__c</columns>
        <columns>AW_SubProductInterest__c</columns>
        <columns>AW_IdleStageIndicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <sharedTo>
            <group>AW_CampaignManagers</group>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <group>Liberty_Adviser_Personal_Assistant</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Close_Cancelled</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Close Cancelled</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/18/2022 12:00 AM</value>
        </filters>
        <label>Close Cancelled</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLI_InstitutionalDistribution</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SLR_Retail_Distribution</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY_SCORE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
        <sharedTo>
            <group>AW_CampaignManagers</group>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <group>Liberty_Adviser_Personal_Assistant</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
        <sharedTo>
            <group>AW_CampaignManagers</group>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <group>Liberty_Adviser_Personal_Assistant</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY_SCORE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
        <sharedTo>
            <group>AW_CampaignManagers</group>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <group>Liberty_Adviser_Personal_Assistant</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Lost</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>AW_ProductInterest__c</columns>
        <columns>AW_SubProductInterest__c</columns>
        <columns>AW_IdleStageIndicator__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.AW_DefaultOpportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.AW_LibertyBusinessOpportunity</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Insights</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Mine</filterScope>
        <label>My Insights</label>
        <sharedTo>
            <group>AW_CampaignManagers</group>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <group>Liberty_Adviser_Personal_Assistant</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY_SCORE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <group>AW_CampaignManagers</group>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <group>Liberty_Adviser_Personal_Assistant</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY_SCORE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>AW_DefaultOpportunity</fullName>
        <active>true</active>
        <businessProcess>AW_DefaultOpportunityProcess</businessProcess>
        <description>Liberty Default Opportunity Record Type</description>
        <label>Default Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_LibertyBusinessOpportunity</fullName>
        <active>true</active>
        <businessProcess>AW_DefaultOpportunityProcess</businessProcess>
        <description>This is a business opportunity</description>
        <label>Liberty Business Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>true</active>
        <businessProcess>FinServ__Opportunity Process</businessProcess>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__RetirementPlanning</fullName>
        <active>true</active>
        <businessProcess>FinServ__Wallet Share</businessProcess>
        <label>Retirement Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__WalletShareOpportunity</fullName>
        <active>true</active>
        <businessProcess>FinServ__Wallet Share</businessProcess>
        <label>Opportunity (Wallet Share)</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLC_DueDiligence</fullName>
        <active>true</active>
        <businessProcess>Due Diligence</businessProcess>
        <label>Due Diligence</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLI_InstitutionalOnboarding</fullName>
        <active>true</active>
        <businessProcess>STANLIB New Business</businessProcess>
        <description>Used to for STANLIB Institutional Onboarding Opportunities</description>
        <label>STANLIB Institutional Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLI_NewBusiness</fullName>
        <active>true</active>
        <businessProcess>RFP  Tender Quote</businessProcess>
        <description>RFP / Quote / Tender</description>
        <label>Institutional New Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLR_NewBusiness</fullName>
        <active>true</active>
        <businessProcess>RFP  Tender Quote</businessProcess>
        <description>RFP / Quote / Tender</description>
        <label>New Business</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AW_LastStatusChangeInPast</fullName>
        <active>true</active>
        <errorConditionFormula>AW_LastStatusChange__c &gt;= NOW()</errorConditionFormula>
        <errorMessage>This Last Status Change date/time cannot be set to a date/time in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
        NOT(ISBLANK( FinServ__ReferredByUser__c )), 
        NOT(ISBLANK( FinServ__ReferredByContact__c )) 
    )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SLC_Populate_close_reason</fullName>
        <active>true</active>
        <description>Before Closing the opportunity, the Close Reason should be populated</description>
        <errorConditionFormula>AND(
OR(ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISPICKVAL(StageName, &quot;Closed Won&quot;),
ISPICKVAL(StageName, &quot;Close Cancelled&quot;)),
ISBLANK(TEXT(SLC_CloseReason__c)),
OR($UserRole.Name = &quot;Business Development Manager&quot;,
$UserRole.Name = &quot;Business Development Manger Assistant&quot;,
$UserRole.Name = &quot;Institutional Distribution&quot;,
$UserRole.Name = &quot;Retail Distribution&quot;,
$UserRole.Name = &quot;Group Channels (SBSA and Liberty)&quot;,
$UserRole.Name = &quot;BDM - Group Channels&quot;,
$UserRole.Name = &quot;Third Party Admin&quot;,
$UserRole.Name = &quot;DFM&quot;,
$UserRole.Name = &quot;BDM - DFM&quot;,
$UserRole.Name = &quot;IFA Channel&quot;,
$UserRole.Name = &quot;BDM - IFA Channel&quot;,
$UserRole.Name = &quot;Institutional Distribution&quot;,
$UserRole.Name = &quot;Institutional Distribution Support Lead&quot;,
$UserRole.Name = &quot;Institutional Distribution Support Team Member&quot;,
$UserRole.Name = &quot;RFP Team Lead Member&quot;,
$UserRole.Name = &quot;RFP Team Member&quot;,
$UserRole.Name = &quot;Client Fund Manager&quot;))</errorConditionFormula>
        <errorMessage>Please populate the Close Reason</errorMessage>
    </validationRules>
</CustomObject>